fix navbar collapse, add back button to article edit, add github to readme

--- a/src/app/article-edit/article-edit.css
+++ b/src/app/article-edit/article-edit.css
@@ -23,4 +23,10 @@ button.save-btn[disabled] {
   display: flex;
   justify-content: center;
   padding: 50px;
+  flex-direction: column;
+  align-items: center;
+}
+
+.back {
+  width: 100px;
 }
